--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@material-ui/pickers": "^3.2.10",
     "air-datepicker": "^2.2.3",
     "date-range-picker": "^0.3.5",
+    "ion-rangeslider": "^2.3.1",
     "item-quantity-dropdown": "^2.1.0",
     "jquery": "^3.4.1",
     "react": "^16.13.0",
