--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "jquery": "^3.4.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "tinypng-webpack-plugin": "^2.0.0",
     "vue": "^2.6.11"
   }
 }
