--- a/package.json
+++ b/package.json
@@ -31,33 +31,37 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.8.7",
-    "@babel/preset-env": "^7.8.7",
-    "@babel/preset-react": "^7.8.3",
-    "autoprefixer": "^9.7.4",
-    "babel-loader": "^8.0.6",
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-react": "^7.9.4",
+    "@types/jquery.simplepagination": "^1.4.30",
+    "autoprefixer": "^9.7.6",
+    "babel-loader": "^8.1.0",
     "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^3.4.2",
+    "css-loader": "^3.5.3",
     "css-mqpacker": "^7.0.0",
     "cssnano": "^4.1.10",
     "file-loader": "^4.3.0",
+    "html-webpack-externals-plugin": "^3.8.0",
     "html-webpack-plugin": "^3.2.0",
+    "ion-rangeslider": "^2.3.1",
+    "jquery": "^3.5.0",
     "jquery-mask-plugin": "^1.14.16",
     "mini-css-extract-plugin": "^0.8.2",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.0",
     "postcss-loader": "^3.0.0",
     "pug": "^2.0.4",
     "pug-loader": "^2.4.0",
     "pug-plain-loader": "^1.0.0",
     "sass-loader": "^8.0.2",
-    "style-loader": "^1.1.3",
-    "svg-sprite-loader": "^4.2.1",
+    "style-loader": "^1.2.0",
+    "svg-sprite-loader": "^4.2.5",
     "svgo": "^1.3.2",
     "svgo-loader": "^2.2.1",
-    "vue-loader": "^15.9.0",
+    "vue-loader": "^15.9.1",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.11",
-    "webpack": "^4.42.0",
+    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
     "webpack-merge": "^4.2.2",
@@ -67,11 +71,11 @@
     "@material-ui/pickers": "^3.2.10",
     "air-datepicker": "^2.2.3",
     "date-range-picker": "^0.3.5",
-    "ion-rangeslider": "^2.3.1",
     "item-quantity-dropdown": "^2.1.0",
-    "jquery": "^3.4.1",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
+    "jquery-paginate": "^1.0.1",
+    "paginationjs": "^2.1.5",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "tinypng-webpack-plugin": "^2.0.0",
     "vue": "^2.6.11"
   }
