--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "ion-rangeslider": "^2.3.1",
     "jquery": "^3.5.0",
     "jquery-mask-plugin": "^1.14.16",
+    "masonry-layout": "^4.2.2",
     "mini-css-extract-plugin": "^0.8.2",
     "node-sass": "^4.14.0",
     "postcss-loader": "^3.0.0",
@@ -58,6 +59,7 @@
     "svg-sprite-loader": "^4.2.5",
     "svgo": "^1.3.2",
     "svgo-loader": "^2.2.1",
+    "swiper": "^5.3.8",
     "vue-loader": "^15.9.1",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.11",
