--- a/package.json
+++ b/package.json
@@ -24,14 +24,8 @@
     "@babel/plugin-proposal-class-properties": "^7.10.1",
     "@babel/polyfill": "^7.10.1",
     "@babel/preset-env": "^7.10.3",
-    "@babel/preset-react": "^7.10.1",
-    "@babel/preset-typescript": "^7.10.1",
-    "@babel/types": "^7.10.4",
     "@types/dom-inputevent": "^1.0.5",
-    "@types/jest": "^26.0.13",
-    "@types/jquery": "^3.5.0",
-    "@typescript-eslint/eslint-plugin": "^4.0.1",
-    "@typescript-eslint/parser": "^4.0.1",
+    "air-datepicker": "^2.2.3",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.0.2",
@@ -43,13 +37,12 @@
     "eslint-plugin-fsd": "^1.0.1",
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-jsx-a11y": "^6.3.0",
-    "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.0",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "identity-obj-proxy": "^3.0.0",
+    "inputmask": "^5.0.5",
     "ion-rangeslider": "^2.3.1",
-    "jest": "^26.4.2",
     "mini-css-extract-plugin": "^0.9.0",
     "nan": "^2.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
@@ -60,8 +53,6 @@
     "style-loader": "^1.2.1",
     "svg-sprite-loader": "^5.0.0",
     "terser-webpack-plugin": "^3.0.6",
-    "ts-jest": "^26.3.0",
-    "typescript": "^4.0.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
@@ -69,8 +60,6 @@
   "dependencies": {
     "jquery": "^3.5.1",
     "normalize.css": "^8.0.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
     "source-map": "^0.7.3"
   }
 }
