--- a/package.json
+++ b/package.json
@@ -44,8 +44,11 @@
     "pug-loader": "^2.4.0",
     "sass": "^1.26.9",
     "sass-loader": "^8.0.2",
+    "simple-pagination": "^1.0.0",
     "style-loader": "^1.2.1",
     "svg-sprite-loader": "^5.0.0",
+    "svgo": "^1.3.2",
+    "svgo-loader": "^2.2.1",
     "terser-webpack-plugin": "^3.0.6",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
