--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "nan": "^2.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "pug": "^3.0.0",
+    "pug-html-loader": "^1.1.5",
     "pug-loader": "^2.4.0",
     "sass": "^1.26.9",
     "sass-loader": "^8.0.2",
