--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack-template",
+  "name": "toxin",
   "version": "1.0.0",
   "description": "webpack template on 24/06/2020",
   "private": true,
@@ -32,6 +32,7 @@
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-jsx-a11y": "^6.3.0",
     "eslint-plugin-react-hooks": "^4.0.0",
+    "favicons-webpack-plugin": "^4.2.0",
     "file-loader": "^6.0.0",
     "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^4.3.0",
@@ -42,7 +43,6 @@
     "nan": "^2.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "pug": "^3.0.0",
-    "pug-html-loader": "^1.1.5",
     "pug-loader": "^2.4.0",
     "sass": "^1.26.9",
     "sass-loader": "^8.0.2",
@@ -58,6 +58,7 @@
   },
   "dependencies": {
     "chart.js": "^2.9.4",
+    "cssnano": "^4.1.10",
     "jquery": "^3.5.1",
     "jquery-bridget": "^2.0.1",
     "masonry-layout": "^4.2.2",
