--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "pug": "^3.0.0",
     "pug-loader": "^2.4.0",
+    "pxtorem-webpack-plugin": "^0.2.2",
     "sass": "^1.26.9",
     "sass-loader": "^8.0.2",
     "simple-pagination": "^1.0.0",
@@ -63,6 +64,7 @@
     "jquery-bridget": "^2.0.1",
     "masonry-layout": "^4.2.2",
     "normalize.css": "^8.0.1",
+    "postcss-pxtorem": "^5.1.1",
     "source-map": "^0.7.3",
     "swiper": "^6.3.5"
   }
