--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "favicons-webpack-plugin": "^4.2.0",
     "file-loader": "^6.0.0",
     "gh-pages": "^3.1.0",
+    "glob": "^7.1.6",
     "html-webpack-plugin": "^4.3.0",
     "identity-obj-proxy": "^3.0.0",
     "inputmask": "^5.0.5",
