write PriceCalculator for card-book #8

--- a/.eslintrc
+++ b/.eslintrc
@@ -18,7 +18,7 @@
     "prefer-destructuring": "off",
     "no-param-resassign": "off",
     "semi": "off",
-    "no-unused-vars": "warn",
+    "no-unused-vars": "off",
     "space-in-parens": "off",
     "import/no-unresolved": "off",
     "import/extensions": "off",
