--- a/.eslintrc
+++ b/.eslintrc
@@ -9,29 +9,19 @@
   "extends": ["airbnb/base", "plugin:fsd/all"],
   "rules": {
     "linebreak-style": 0,
-    "no-tabs": "off",
     "indent": [2, 2],
     "no-console": "warn",
     "eot-last": "off",
     "max-len": [2, 200, 4, { "ignoreUrls": true }],
-    "no-plusplus": "off",
-    "prefer-destructuring": "off",
-    "no-param-resassign": "off",
-    "semi": "off",
-    "no-unused-vars": "off",
-    "space-in-parens": "off",
     "import/no-unresolved": "off",
     "import/extensions": "off",
     "object-curly-newline": "off",
-    "operator-linebreak": 0,
-    "no-shadow": "off",
-    "class-methods-use-this": "off",
     "no-useless-return": "off",
     "comma-dangle": "off",
-    "consistent-return": "off",
+    "implicit-arrow-linebreak": "off",
+    "no-new": "off",
     "no-else-return": "off",
-    "no-param-reassign": "off",
-    "implicit-arrow-linebreak": "off"
+    "no-param-reassign": "off"
   },
   "parserOptions": {
     "ecmaVersion": 11,
