--- a/.eslintrc
+++ b/.eslintrc
@@ -21,7 +21,8 @@
     "implicit-arrow-linebreak": "off",
     "no-new": "off",
     "no-else-return": "off",
-    "no-param-reassign": "off"
+    "no-param-reassign": "off",
+    "class-methods-use-this": "off"
   },
   "parserOptions": {
     "ecmaVersion": 11,
