--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "jquery-bridget": "^2.0.1",
     "masonry-layout": "^4.2.2",
     "mini-css-extract-plugin": "^1.3.4",
+    "nodejs": "^0.0.0",
     "normalize.css": "^8.0.1",
     "postcss-pxtorem": "^5.1.1",
     "source-map": "^0.7.3",
