--- a/package.json
+++ b/package.json
@@ -40,11 +40,14 @@
     "identity-obj-proxy": "^3.0.0",
     "inputmask": "^5.0.5",
     "ion-rangeslider": "^2.3.1",
+    "mini-css-extract-plugin": "^1.4.1",
     "nan": "^2.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss": "^8.2.9",
+    "postcss-loader": "^5.2.0",
+    "postcss-preset-env": "^6.7.0",
     "pug": "^3.0.0",
     "pug-loader": "^2.4.0",
-    "pxtorem-webpack-plugin": "^0.2.2",
     "sass": "^1.32.4",
     "sass-loader": "^10.1.1",
     "simple-pagination": "^1.0.0",
@@ -58,16 +61,14 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "autoprefixer": "^10.2.5",
     "chart.js": "^2.9.4",
-    "cssnano": "^4.1.10",
+    "css-mqpacker": "^7.0.0",
+    "cssnano": "^4.1.11",
     "focus-visible": "^5.2.0",
     "jquery": "^3.5.1",
     "jquery-bridget": "^2.0.1",
     "masonry-layout": "^4.2.2",
-    "mini-css-extract-plugin": "^1.3.4",
-    "nodejs": "^0.0.0",
-    "normalize.css": "^8.0.1",
-    "postcss-pxtorem": "^5.1.1",
     "source-map": "^0.7.3",
     "swiper": "^6.4.5"
   }
