--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "start": "cross-env NODE_ENV=development webpack-dev-server --mode development --open",
     "test": "jest",
     "deploy": "gh-pages -d dist",
-    "lint": "eslint ."
+    "lint:ts": "eslint .",
+    "format:js": "eslint . fix--",
+    "lint:scss": "stylelint \"**/*.scss\"",
+    "format:scss": "stylelint \"**/*.scss\" fix--"
   },
   "browsersList": "> 0.25%, not dead",
   "author": "Arslanov Ismagil",
@@ -52,6 +55,9 @@
     "sass-loader": "^10.1.1",
     "simple-pagination": "^1.0.0",
     "style-loader": "^1.2.1",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^22.0.0",
+    "stylelint-order": "^4.1.0",
     "svg-sprite-loader": "^5.2.1",
     "svgo": "^1.3.2",
     "svgo-loader": "^2.2.1",
@@ -70,6 +76,7 @@
     "jquery-bridget": "^2.0.1",
     "masonry-layout": "^4.2.2",
     "source-map": "^0.7.3",
+    "stylelint-scss": "^3.19.0",
     "swiper": "^6.4.5"
   }
 }
