--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
   "root": true,
   "extends": ["airbnb/base", "plugin:fsd/all"],
   "rules": {
+    "no-underscore-dangle": "off",
     "linebreak-style": 0,
     "indent": [2, 2],
     "no-console": "warn",
@@ -26,9 +27,6 @@
   },
   "parserOptions": {
     "ecmaVersion": 11,
-    "sourceType": "module",
-    "ecmaFeatures": {
-      "jsx": true
-    }
+    "sourceType": "module"
   }
 }
