--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "cross-env NODE_ENV=development webpack-dev-server --mode development --open",
     "test": "jest",
     "deploy": "gh-pages -d dist",
-    "lint:js": "eslint .",
+    "lint:js": "eslint . --fix",
     "lint:scss": "stylelint \"**/*.scss\""
   },
   "browsersList": "> 0.25%, not dead",
@@ -47,6 +47,8 @@
     "postcss": "^8.2.9",
     "postcss-loader": "^5.2.0",
     "postcss-preset-env": "^6.7.0",
+    "prettier": "^2.3.0",
+    "prettier-eslint": "^12.0.0",
     "pug": "^3.0.0",
     "pug-loader": "^2.4.0",
     "sass": "^1.32.4",
