--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,12 +2,8 @@
   "extends": "stylelint-config-standard",
   "plugins": ["stylelint-scss", "stylelint-order"],
   "rules": {
-    "at-rule-no-unknown": [
-      true,
-      {
-        "ignoreAtRules": ["function", "return", "mixin"]
-      }
-    ],
+    "at-rule-no-unknown": null,
+    "scss/at-rule-no-unknown": true,
     "order/properties-order": [
       "position",
       "z-index",
