--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "gh-pages": "^3.2.2",
     "html-webpack-plugin": "^4.5.2",
     "identity-obj-proxy": "^3.0.0",
-    "inputmask": "^5.0.5",
     "mini-css-extract-plugin": "^1.4.1",
     "nan": "^2.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
@@ -61,9 +60,11 @@
     "terser-webpack-plugin": "^3.0.6",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "stylelint-scss": "^3.19.0"
   },
   "dependencies": {
+    "inputmask": "^5.0.5",
     "air-datepicker": "^2.2.3",
     "autoprefixer": "^10.2.5",
     "chart.js": "^2.9.4",
@@ -75,7 +76,6 @@
     "jquery-bridget": "^2.0.1",
     "masonry-layout": "^4.2.2",
     "source-map": "^0.7.3",
-    "stylelint-scss": "^3.19.0",
     "swiper": "^6.7.1"
   }
 }
