--- a/package.json
+++ b/package.json
@@ -16,17 +16,20 @@
   "author": "Arslanov Ismagil",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.14.5",
+    "@babel/core": "^7.14.6",
     "@babel/plugin-proposal-class-properties": "^7.14.5",
     "@babel/polyfill": "^7.10.1",
-    "@babel/preset-env": "^7.14.5",
-    "@types/dom-inputevent": "^1.0.6",
+    "@babel/preset-env": "^7.14.7",
+    "@types/dom-inputevent": "^1.0.7",
+    "autoprefixer": "^10.3.0",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.4.1",
     "cross-env": "^7.0.3",
     "css-loader": "^5.2.6",
-    "eslint": "^7.29.0",
+    "css-mqpacker": "^7.0.0",
+    "cssnano": "^4.1.11",
+    "eslint": "^7.30.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-fsd": "^1.0.1",
@@ -50,22 +53,19 @@
     "pug-loader": "^2.4.0",
     "sass": "^1.35.1",
     "sass-loader": "^10.1.1",
+    "source-map": "^0.7.3",
     "style-loader": "^1.2.1",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0",
     "stylelint-order": "^4.1.0",
+    "stylelint-scss": "^3.19.0",
     "svg-sprite-loader": "^5.2.1",
     "svgo": "^1.3.2",
     "svgo-loader": "^2.2.1",
     "terser-webpack-plugin": "^3.0.6",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.2",
-    "stylelint-scss": "^3.19.0",
-    "source-map": "^0.7.3",
-    "css-mqpacker": "^7.0.0",
-    "cssnano": "^4.1.11",
-    "autoprefixer": "^10.2.5"
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "inputmask": "^5.0.5",
