--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/plugin-proposal-class-properties": "^7.14.5",
     "@babel/polyfill": "^7.10.1",
     "@babel/preset-env": "^7.14.7",
+    "@prettier/plugin-pug": "^1.16.1",
     "@types/dom-inputevent": "^1.0.7",
     "autoprefixer": "^10.3.0",
     "babel-loader": "^8.2.2",
@@ -34,6 +35,7 @@
     "eslint-plugin-fsd": "^1.0.1",
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-pug": "^1.2.3",
     "eslint-plugin-react-hooks": "^4.0.0",
     "favicons-webpack-plugin": "^4.2.0",
     "file-loader": "^6.2.0",
@@ -49,6 +51,7 @@
     "prettier": "^2.3.1",
     "prettier-eslint": "^12.0.0",
     "pug": "^3.0.0",
+    "pug-alias": "^2.0.1",
     "pug-loader": "^2.4.0",
     "sass": "^1.35.1",
     "sass-loader": "^10.1.1",
